--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@nuxtjs/style-resources": "^1.2.1",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2"
   }
 }
